@@ -1,3 +1,3 @@
 simplelog.format.debug={0}[{4}|{2}] {5}
 simplelog.dateFormat=HH:mm:ss.SSS
-simplelog.defaultLevel=4    
+simplelog.defaultLevel=4
